--- a/largeformat.html
+++ b/largeformat.html
@@ -48,7 +48,38 @@
             </div>
         </div>
     </nav>
-    
+    <div class="container">
+        <div class="row">
+            <br>
+            <h1>LARGE FORMAT PRINTING</h1>
+            <br><br>
+            <div class="col-md-6">
+                <p>Our large format printing has no limit in size. We handle each job from artwork stage to finishing
+                    at stage.</p>
+
+                <p>We take interest in details to produce high quality printing. At Inkit we focus on providing the best
+                    large format prints possible. Our colour are vibrant, our media is tough, and our prints look great.
+                </p>
+
+                <p>In many cases, such as large quantities of banners, we can compete with screen print pricing while
+                    still providing better image quality. If you need to capture attention at any upcoming events,
+                    indoor or outdoor, we have the solution for you. We offer full 6-colour, digitally printed indoor
+                    banner prints in any size, any colour, and any design that you might need. Even more importantly,
+                    all of our banners are available at low wholesale prices!</p>
+
+                <p>We use the latest in vinyl banner printing and digital print banner technology to create beautiful,
+                    vibrant, and professional-looking banners.</p>
+
+                <p>We hope you will consider Inkit in your next large format printing job (banners, billboard media,
+                    roll up banners, backdrop banners, etc.)
+                </p>
+            </div>
+            <div class="col-md-6">
+                <img src="images/la1.jpg" alt="" class="img-fluid">
+            </div>
+            <img src="images/l1.jpg" alt="" class="img-fluid">
+        </div>
+    </div>
     <div class="footer">
         <div class="container">
             <div class="row">
