--- a/digi.html
+++ b/digi.html
@@ -48,7 +48,36 @@
             </div>
         </div>
     </nav>
-    
+    <br><br>
+    <div class="container">
+        <div class="row">
+            <h1 class="text-center">DIGITAL PRINTING</h1>
+            <br><br>
+            <p>Our digital printing provides your with the best of quality. We handle each job from artwork stage to
+                finishing at stage.</p>
+
+            <p>Taking interest in details to produce high quality printing. At Prime Digital we focus on providing the
+                best Digital prints possible. Our colour are vibrant, our media is tough, and our prints look great.</p>
+
+            <p> We offer full 6-colour, digitally printed paper prints in any size, any colour, and any design that you
+                might need. Even more importantly, our quality is top norch</p>
+
+            <p>We hope you will consider Prime Digital in your next digital printing job. </p>
+            <br><br><br><br><br>
+            <div class="col-md-3 col-xs-12">
+                <img src="images/p2.jpg" alt="abtpdl" class="img-fluid" >
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="images/p3.png" alt="abtpdl" class="img-fluid" >
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="images/p4.png" alt="abtpdl" class="img-fluid" >
+            </div>
+            <div class="col-md-3 col-xs-12">
+                <img src="images/p5.jpg" alt="abtpdl" class="img-fluid" >
+            </div>
+        </div>
+    </div>
     <div class="footer">
         <div class="container">
             <div class="row">
