--- a/corporate.html
+++ b/corporate.html
@@ -48,7 +48,26 @@
             </div>
         </div>
     </nav>
-    
+    <br><br>
+    <div class="container">
+        <div class="row">
+            <h1 class="text-center">CORPORATE SOUVENIRS</h1>
+            <br><br><br><br>
+            <div class="col-md-6 col-xs-12">
+                <p> Are you looking for souvenir items to help commemorate a special anniversary or day? Do you want a
+                    wide range of souvenir items to choose from?</p>
+
+                <p>We also specialise in personalising souvenirs and gift items car branding and corporate identity. We
+                    at prime digital are able to supply various items and personalised souvenir in no time.
+                </p>
+                <img src="images/car.jpg" alt="abtpdl" class="img-fluid w-100" >
+            </div>
+            <div class="col-md-6 col-xs-12">
+                <img src="images/co1.jpeg" alt="abtpdl" class="img-fluid " >
+
+            </div>
+        </div>
+    </div>
     <div class="footer">
         <div class="container">
             <div class="row">
