--- a/3d.html
+++ b/3d.html
@@ -48,7 +48,32 @@
             </div>
         </div>
     </nav>
-    
+    <br><br>
+    <div class="container cop">
+        <div class="row">
+            <h1 class="text-center">2D and 3D SIGNAGE</h1>
+            <br><br><br><br>
+            <center><p> If your looking for the best 2d nd 3d signages look no further,</p>
+
+                <p>With Prime Digital we give you the absolute best 3d solutions give you the best of corporate identity 
+                 </p>
+                 <p>With the ltest cutting edge machines our signages are strong and can withstand the test of time . 
+                 </p></center>
+                 
+                 <div class="col-md-3 col-xs-12">
+                    <img src="images/w1.jpg" alt="abtpdl" class="img-fluid" >
+                  </div>
+                 <div class="col-md-3 col-xs-12">
+                    <img src="images/w6.jpg" alt="abtpdl" class="img-fluid" >
+                 </div>
+                 <div class="col-md-3 col-xs-12">
+                    <img src="images/w3.jpg" alt="abtpdl" class="img-fluid" >
+                 </div>
+                 <div class="col-md-3 col-xs-12">
+                    <img src="images/w4.jpg" alt="abtpdl" class="img-fluid" >
+                 </div>
+        </div>
+    </div>
     <div class="footer">
         <div class="container">
             <div class="row">
